# src/main/java/fabrica/empleados/controller/HandlerController.java
@@ -1,11 +1,10 @@
 package fabrica.empleados.controller;
 
 import fabrica.empleados.api.model.ErrorResponse;
+import fabrica.empleados.exceptions.DataBaseException;
 import fabrica.empleados.exceptions.EmpleadoNotFoundException;
-import fabrica.empleados.model.entities.Empleado;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseBody;
@@ -18,9 +17,17 @@ public class HandlerController {
     @ResponseBody
     @ExceptionHandler(EmpleadoNotFoundException.class)
     @ResponseStatus(HttpStatus.NOT_FOUND)
-    ErrorResponse empleadoNotFoundResponse(EmpleadoNotFoundException ex) {
+    ErrorResponse empleadoNotFoundHandler(EmpleadoNotFoundException ex) {
         log.info("[FIN] No se encotraron datos.");
-        ErrorResponse errorResponse = new ErrorResponse().mensaje("No encontrado").detalle(ex.getMessage());
-        return errorResponse;
+        return new ErrorResponse().mensaje(ex.getLocalizedMessage()).detalle(ex.getMessage());
+    }
+
+    @ResponseBody
+    @ExceptionHandler(DataBaseException.class)
+    @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
+    ErrorResponse dataBaseHandler(DataBaseException ex) {
+        String detalle = ex.getMessage() != null ? ex.getMessage(): "Error al intentar realizar operaciones con la base de datos";
+        log.info("[FIN] Error en la base de datos. | {}", detalle);
+        return new ErrorResponse().mensaje(ex.getLocalizedMessage()).detalle(detalle);
     }
 }
